# Diabetes_Manager

./: CMakeLists.txt  README.md  main.cpp  settings
Datas/: DataBase.db
SQLClass/: CMakeLists.txt  sqlServer.cpp  sqlServer.h
SQLiteLib/: CMakeLists.txt
SingletonSQLServer/: CMakeLists.txt  SQLServer.cpp  SQLServer.h
SingletonSQLServer/Connect/: CMakeLists.txt  Connect.cpp  Connect.h
Window/: CMakeLists.txt  window.cpp  window.h
